--- a/index.html
+++ b/index.html
@@ -10,7 +10,32 @@
 </head>
 
 <body>
-    
+    <div class="container">
+        <div class="hero-container">
+            <img class="h-img" src="images/super-1.png">
+            <div class="h-name">Spiderman</div>
+            <div class="h-point">12</div>
+        </div>
+        <div class="hero-container">
+            <img class="h-img" src="images/super-2.png">
+            <div class="h-name">Captain America</div>
+            <div class="h-point">50</div>
+        </div>
+        <div class="points">
+            <div class="h-point">5 - 0</div>
+        </div>
+        <div class="hero-container">
+            <img class="h-img" src="images/super-3.png">
+            <div class="h-name">Wonder Woman</div>
+            <div class="h-point">30</div>
+        </div>
+        <div class="hero-container">
+            <img class="h-img" src="images/super-4.png">
+            <div class="h-name">Gem Woman</div>
+            <div class="h-point">12</div>
+        </div>
+    </div>
+
     <footer class="footer">Made with <img src="/images/Vector.svg"> by ProGrad</footer>
 </body>
 
